# cuda-switch

./: CMakeLists.txt  README.md  main.cpp  test.cu  test.cuh
